--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NEWCALMAP }}'
-          projectId: newcalmap
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NCMAP_1775E }}'
+          projectId: ncmap-1775e
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
